# opencicd

./: .gitignore  pyproject.toml
opencicd/: exec_plan.py  main.py  task.py
tests/: test_exec_plan.py
tests/spec_files/: multi_main.yaml  simple.yaml
